--- a/src/Pagestyles/Dashboard.css
+++ b/src/Pagestyles/Dashboard.css
@@ -47,6 +47,23 @@ li{
     padding: 30px 0px;
 
 }
+.alertboxxx{
+    padding: 20px;
+    background-color: rgb(159, 248, 159);
+    box-shadow: 0 0 10px rgba(0,0,0,0.7);
+    float: right;
+    margin-top: 10px;
+    width: 25vw;
+    position: absolute;
+    left: 72vw;
+    top: 0;
+    right: 20vw;
+    color: white;
+    border-radius: 8px;
+    position: fixed;
+    z-index: 1000;
+    display: block;
+    }
 .dashboard-nav{
     padding: 20px;
     border: 1px solid #8c1515;
