--- a/grade-book/src/Styles/DashboardPage.css
+++ b/grade-book/src/Styles/DashboardPage.css
@@ -4,7 +4,7 @@
   gap: 5px;
   padding: 70px;
   box-sizing: border-box;
-  background-color: #00357a;
+  background-color: #0056b3;
 
  }
  .dashboard-page h1{
