--- a/grade-book/src/Styles/Footer.css
+++ b/grade-book/src/Styles/Footer.css
@@ -41,3 +41,14 @@
 .links li a:hover {
   text-decoration: underline;
 }
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  height: 90px; 
+  margin-right: 20px;
+  margin-left: 40px;
+  width: 150px;
+}
