--- a/LoginStyle.css
+++ b/LoginStyle.css
@@ -10,7 +10,7 @@ body {
   justify-content: center;
   align-items:center;
   min-height: 100vh;
-  background: url('C:\\Users\\ekowd\\OneDrive\\Desktop\\output\\11083926_DCIT205_Assignment1\\11083926_DCIT205_Assignment1\\LoginBackground3.jpg') no-repeat;
+  background: url('C:\\Users\\ekowd\\OneDrive\\Desktop\\output\\11083926_DCIT205_Assignment1\\11083926_DCIT205_Assignment1\\LoginBackground.jpg') no-repeat;
   background-size: cover;
   background-position: center;
 }
