changed the min-height to max-height

--- a/grading-website/src/App.css
+++ b/grading-website/src/App.css
@@ -1,6 +1,6 @@
 
 body, html {
-  min-height: 80vh;
+  max-height: 180vh;
   margin: 0; /* Remove default margin */
   padding: 0; /* Remove default padding */
 }
