--- a/missing/src/Pages-And-Components/Home/Home.css
+++ b/missing/src/Pages-And-Components/Home/Home.css
@@ -6,26 +6,23 @@
 }
 
 .container{
-  width: 100%;
+  position: relative;
   height: 100vh; 
-  background-image: url(C:\Users\user\Desktop\DCIT205_Assignment\Frontend-Grading-Assignment\missing\src\Pages-And-Components\Assets\homeimg.jpg);
   text-align: center;
-  font-size: 24px;
-  width: 100%;
-  color: #fff;
+  color: burlywood;
   background-size: cover;
-  justify-content: center;
-  align-items: center;
-  padding-top: 200px;
-
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 50px;
+  height: 100vh;
+  background-position: center;
 }
-.btn{
-  width: 60px;
-  height: 30px;
+a{
+  width: 40px;
+  height: 20px;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 10px;
   border: none;
-  background-color: #333;
-  color: #ffffff;
+  background-color: #15141c;
   padding: 5px 15px;
 }
