Added some new files and updated the landing page and the footer

--- a/assignment_websiwte/src/Header.css
+++ b/assignment_websiwte/src/Header.css
@@ -15,9 +15,17 @@
 }
 
 .logo{
-    width: 20%;
+    width: 40%;
     padding: 15px;
     
+}
+
+.logo_img:hover{
+    cursor: pointer;
+}
+
+.logo_img{
+    width: 100%;
 }
 
 .menu{
