--- a/assignment_websiwte/src/Login_page.css
+++ b/assignment_websiwte/src/Login_page.css
@@ -15,6 +15,7 @@ body{
     
 }
 
+
 .form_container{
     height: auto;
     width: 600px;
@@ -22,6 +23,18 @@ body{
     top: 270px;
     left: 30%;
     box-shadow: #202020;
+}
+
+.back{
+    position: absolute;
+    top:20px;
+    left: 20px;
+    border: none;
+    background-color: blue;
+    color: white;
+    width: 80px;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 .input{
