--- a/assignment_websiwte/src/Footer.css
+++ b/assignment_websiwte/src/Footer.css
@@ -49,3 +49,47 @@ label{
 
 }
 
+
+
+
+.footer_container{
+    width: 97%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 150px 100px;
+    color: #ffffff;
+    margin-left: 18px;
+    margin-bottom: 0px;
+   
+   
+    
+    
+
+}
+
+.footer_item{
+    text-align: center;
+    padding: 15px;
+    
+}
+
+.footer_menu{
+    text-decoration: none;
+    color: white;
+    margin-top: 18px;
+}
+
+
+.follow_us_logo{
+    width: 10%;
+    margin: 4px;
+}
+
+.follow_us_logo:hover{
+    cursor: pointer;
+    opacity: 0.8;
+}
+#footer_logo{
+    width: 30px;
+}
+
