--- a/assignment_websiwte/src/HelpSupport.css
+++ b/assignment_websiwte/src/HelpSupport.css
@@ -41,3 +41,77 @@
     opacity: 0.7;
 
 }
+
+.contact_form{
+    background-color: #fffff4;
+    width: 600px;
+    margin-top: 150px;
+    margin-left: 100px;
+    border-radius: 20px;
+
+}
+
+.csLogo_img{
+    width: 100%;
+    margin-left: 200px;
+    padding: 10px;
+    
+
+}
+
+.log{
+    width: 40%;
+    height: 60px;
+}
+
+.container_form {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 5px;
+  }
+
+  .container h2 {
+    text-align: center;
+    background-color: aliceblue;
+  }
+
+  .label {
+    display: block;
+    margin-bottom: 5px;
+    color: rgb(80, 60, 10);
+  }
+
+
+#name, #email{
+    width: 100%;
+    padding: 8px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+  }
+
+  #message{
+    resize: vertical;
+    height: 100px;
+    width: 320px;
+  }
+
+  #submit{
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    width: 320px;
+    
+  }
+  #help{
+    width: 550px;
+    height: 635px;
+    position: absolute;
+    top: 49%;
+    left: 51%;
+  }
+
