--- a/assignment_websiwte/src/Home.css
+++ b/assignment_websiwte/src/Home.css
@@ -17,7 +17,7 @@ body{
   .hero-text {
     text-align: center;
     position: absolute;
-    top: 40%;
+    top: 25%;
     left: 85%;
     transform: translate(-50%, -50%);
     color: rgb(82, 82, 237);
@@ -52,4 +52,19 @@ body{
   h4{
     color: rgb(70, 52, 5);
     margin: 100px;
+  }
+
+  #topic{
+    text-align: center;
+    color: blue;
+    font-size: 28px;
+  }
+
+  #home_content{
+    margin: 80px;
+
+  }
+  li{
+    font-size: 24px;
+    color: goldenrod;
   }
