--- a/Help.css
+++ b/Help.css
@@ -67,17 +67,7 @@ textarea {
     font-size: 1em;
 }
 
-button {
-    width: 50%;
-    height: 5vh;
-    color: #ffffff;
-    background: #00d689;
-    outline: none;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 0.8em;
-}
+
 
 .ContactButton {
   width: 130px;
@@ -175,4 +165,27 @@ button {
   font-family: 'Segoe UI';
   font-size: 17px;
   color: aliceblue;
+}
+
+.collapsible {
+  background-color: rgba(27, 68, 190, 0.875);
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #322f6f;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
 }
