--- a/my-react-project/src/App.css
+++ b/my-react-project/src/App.css
@@ -116,3 +116,26 @@ input {
   border-radius: 10px;
 }
 
+.dash {
+  background-image: url("../public/7858562.png");
+  background-size: cover;
+  background-attachment: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100vh;
+  padding-top: 260px;
+  padding-right: 50px;
+  color: #fff;
+  text-align: center;
+  padding-left: 30px;
+
+}
+
+.dash h2 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 0;
+}
