--- a/src/component/login.css
+++ b/src/component/login.css
@@ -1,21 +1,17 @@
-/* Login.css */
-
-/* General styles */
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
   }
   
-  /* Container styles */
+ 
   .login-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 40px;
-    margin-left: -20px;
+   
   }
   
-  /* Image container styles */
   .image-container {
     width: 150px;
     height: 150px;
@@ -52,7 +48,7 @@ body {
   button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color:lightblue;
     color: #fff;
     border: none;
     border-radius: 50px;
@@ -92,22 +88,6 @@ body {
   }
 
 
-.beside {
-  display: flex;
-  justify-content: center;
 
-  
-}
-
-.image-beside-form {
-  margin-right: 20px;
-  margin-left: 400px; 
-  margin-top: 50px;
-}
-
-.image-beside-form img {
-  width: 360px;
-  height: 550px;
-}
 
   
