--- a/src/Components/Styling/Navbar.css
+++ b/src/Components/Styling/Navbar.css
@@ -1,10 +1,45 @@
-#link {
-    color:white;
-    font-weight: 500;
+#bnv {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 15px;
+   }
+   #link {
     text-decoration: none;
+    padding: 7px;
+    color:black;
+    font-weight: 600;
+    margin-bottom: 46px;
+    border-radius: 7px;
     transition: 0.2s;
-}
+    border-style: none;
+   }
 
-#link:hover {
-    font-size: larger;
+   #link:hover {
+    border-style: inset inset;
+    border-width: 1px;
+   }
+
+@media screen and (max-width:450px) {
+   #bnv {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    padding-bottom: 15px;
+   }
+   #link {
+    text-decoration: none;
+    color:black;
+    font-weight: 600;
+    padding: 7px;
+    margin-bottom: 46px;
+    border-radius: 7px;
+   }
+   #link:hover {
+    border-style: inset inset;
+    border-radius: 20px;
+    border-width: 20px;
+   }
 }
