--- a/src/Styling/Dashboard.css
+++ b/src/Styling/Dashboard.css
@@ -1,125 +1,67 @@
-.Main {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 100vh;
-    width: 100%;
-    gap: 5px;
-  }
-
-.topSection {
-  margin-top: -20px;
-  background-color: #0000ff7e;
-  width: 100%;
-  height: 70px;
-  padding: 10px;
-  margin-top: 0px;
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
+.dMain {
+    margin-bottom: 40px;
 }
-
-.logo {
-  margin-top: 6px;
-  margin-left: 25px;
-}
-
-.title {
-  margin-left: -16px;
-  padding: 20px;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  gap: 650px;
-}
-
-.title1 {
-  margin-left: 50px;
-}
-
-.middleSection {
-
+.dmiddleSection {
+    padding: 40px;
     display: flex;
     flex-direction: row;
-    gap: 30px;
-    width: 90%;
-    height: 70%;
 }
-
-
+#navbar {
+    padding: 20px;
+    background-color: #eee;
+    position: fixed;
+    top: 520px;
+    width: 100%;
+}
+#footer {
+    padding-bottom: 60px;
+    padding: 20px;
+}
 .middleSection0 {
-  margin-top: 30px;
-  border-radius: 20px;
-  gap:10px;
-  justify-content: center;
-  align-items: center;
-  height: 87%;
-  width: 60%;
-  display: flex;
-  flex-direction: row;
-  border-style: groove groove;
-
-}
-
-
-
-.m1 {
-    background-color: white;
-    height: 96%;
-    width: 59%;
-    border-radius: 10px;
-}
-
-#ntop {
-    margin-left: 40px;
-    gap: 5px;
-    margin-bottom: -19px;
-}
-
-.m2 {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    height: 96%;
-    width: 37%;
+    gap: 0px;
 }
 
-.m21 {
-    padding: 1px;
-    background-color: white;
-    height: 47%;
-    width: 100%;
-    border-radius: 10px;
+#grades {
+    display: flex;
+    flex-direction: row;
+    gap: 150px;
 }
-
-.m22 {
-    background-color: white;
-    height: 99%;
-    width: 100%;
-    border-radius: 10px;
-}
-
-.middleSection1 {
-  margin-top: 30px;
-    border-radius: 20px;
+.middleSection10 {
+    display: flex;
+    flex-direction: column;
+    background-color: #eee;
+    padding: 20px;
     justify-content: center;
     align-items: center;
-    height: 87%;
-    width: 30%;
-    border-style: groove groove;
-    display: flex;
-    flex-direction: column;
 }
 
-.middleSection10 {
-  justify-content: center;
-  align-items: center;
-  height: 76%;
-  width: 86%;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-}
 
+
+@media screen and (max-width:450px) {
+    .dMain {
+        margin-bottom: 40px;
+    }
+    .dmiddleSection {
+        padding: 20px;
+        padding: 40px;
+        display: flex;
+        flex-direction: column;
+    }
+    #navbar {
+        padding: 20px;
+        background-color: #eee;
+        position: fixed;
+        top: 520px;
+        width: 100%;
+    }
+    #footer {
+        padding-bottom: 90px;
+    }
+    .middleSection0 {
+        display: flex;
+        flex-direction: column;
+        gap: 0px;
+    }
+}
