--- a/src/Styling/Login.css
+++ b/src/Styling/Login.css
@@ -1,55 +1,27 @@
-.Main {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+
+@media screen and (max-width:450px) {
+    
+
+.Main0 {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
-  }
+}
 
-  .Main0 {
-    background-color: #eee;
-    border-radius: 5px;
-    height: 440px;
-    width: 440px;
-    border-top-width: 20px;
-    display: flex;
-    flex-direction: column;
-    border-style: groove groove;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .Form {
-    border-radius: 5px;
-    height: 400px;
-    width: 400px;
-    border-top-width: 20px;
-    border-color: blue;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-  }
-  
-  #text00 {
-    margin-right: 140px;
-  }
+.Form {
+    border-style: inset groove groove;
+    margin-top: 30px;
+   min-height: 400px;
+   min-width: 250px;
+   background-color: #eee;
+   display: flex;
+   padding: 20px;
+   gap: 10px;
+   border-radius: 20px;
+   align-items: center;
+   flex-direction: column;
+}
 
-  #input {
-    border-radius: 5px;
-    padding: 2px;
-    border-color: white;
-    padding-left: 9px;
-
-  }
-
-  #Login {
-    background-color: #0000ff7e;
-    border-width: 0px;
-    border-radius: 50px;
-    width: 110px;
-    height: 35px;
-    color: white;
-  }
+}
