--- a/my-react-project/src/App.css
+++ b/my-react-project/src/App.css
@@ -117,7 +117,7 @@ input {
 }
 
 .dash {
-  background-image: url("../public/7858562.png");
+  background-image: url("../public/5408552 (1).jpg");
   background-size: cover;
   background-attachment: fixed;
   position: absolute;
