--- a/dashboard.css
+++ b/dashboard.css
@@ -62,8 +62,10 @@
     }
 }
 
-@media screen and (min-width: 900px) and (max-width: 1920px) {
-   .tab-1{
+@media screen and (min-width: 900px) and (max-width: 1050px) {
+    .dashboard{
+        padding-bottom: 50%;
+    }.tab-1{
         min-width: 90%;
         max-height: 100px;
     }
@@ -71,16 +73,15 @@
         max-width: 60px;
         font-size: 0.6rem;
     }
-    
 }
 
-.total{
+.dashboard{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    background-color: #072a5a;
+    background-color: rgb(94, 105, 133);
 }
 
 .tab-1{
@@ -119,7 +120,7 @@
 
 .nav-button:hover{
     background-color: white;
-    color: #072a5a;
+    color: rgb(74, 88, 104);
     cursor: pointer;
     transition: .7s;
 }
@@ -161,7 +162,7 @@
     width: 400px;
     margin: 50px auto;
     padding-bottom: 20px;
-    background-color: #a07d50;
+    background-image: linear-gradient(90deg, rgb(245, 201, 7), orange);
     border-radius: 20px;
 }
 
@@ -191,12 +192,8 @@
 .card-title{
     margin: 50px auto;
     text-align: center;
-    color: #072a5a;
 }
 
-.upcoming{
-    color: #072a5a; 
-}
 .course-card{
     height: 60px;
     width: 300px;
@@ -224,7 +221,7 @@
     align-items: center;
     justify-content: space-between;
     border-radius: 15px;
-    background-color: #a07d50;
+    background-image: linear-gradient(200deg, rgb(201, 24, 54), rgb(224, 55, 83));
     color: white;
     font-family: cursive;
 }
@@ -239,6 +236,24 @@
 }
 
 /*Styling only for grades page*/
+.grade-page{
+    display: flex;
+    flex-direction: column;
+}
+
+.select{
+    height: 100px;
+    width: 100%;
+    margin: 50px auto;
+}
+
+#semester{
+    height: 30px;
+    width: 80px;
+    margin: 30px;
+    border: 2px solid black;
+    border-radius: 10px;
+}
 
 .grade-table{
     width: 90%;
@@ -261,20 +276,17 @@ thead{
     width: 15%;
 }
 
-/*Styling only for help page*/
-.help-info{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-h2{
-    color:#072a5a ;
-}
-
 /*Styling only for contact Page*/
 .contact-tab{
     height: 100vh;
     flex-direction: column;
 }
+
+/*Styling only for help page*/
+.help-info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+}
+
