--- a/missing_grade_/src/Pages/HelpAndSupport.css
+++ b/missing_grade_/src/Pages/HelpAndSupport.css
@@ -1,146 +1,21 @@
-@import url('https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-straight/css/uicons-regular-straight.css');
-
-@media screen and (max-width: 500px) {
-    .tab-1{
-        min-width: 90%;
-        max-height: 100px;
-    }
-    .nav-button{
-        max-width: 60px;
-        font-size: 0.6rem;
-    }
-    .tab-2{
-        min-width: 80%;
-        flex-wrap: wrap;
-    }
-    .tab-2-left{
-        min-width: 350px;
-    }
-    .activity-tabs{
-        max-width: 300px;
-    }
-    .activity-tab{
-        min-width: 200px;
-    }
-    .events{
-        max-width: 320px;
-    }
-    .event{
-        max-width: 280px;
-    }
-
-    .tab-2-right{
-        max-width: 400px;
-        padding: 10px;
-    }
-
-    .course-card{
-        max-width: 260px;
-    }
+.help-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
-@media screen and (min-width: 600px) and (max-width: 850px) {
-    .tab-1{
-        min-width: 90%;
-        max-height: 100px;
-    }
-    .nav-button{
-        max-width: 60px;
-        font-size: 0.6rem;
-    }
-    .tab-2{
-        min-width: 80%;
-        flex-wrap: wrap;
-    }
-    .tab-2-right{
-        min-width: 600px;
-        padding: 10px;
-    }
-
-    .course-card{
-        min-width: 500px;
-    }
-}
-
-@media screen and (min-width: 900px) and (max-width: 1050px) {
-    .dashboard{
-        padding-bottom: 50%;
-    }.tab-1{
-        min-width: 90%;
-        max-height: 100px;
-    }
-    .nav-button{
-        max-width: 60px;
-        font-size: 0.6rem;
-    }
-}
-
-.dashboard{
+.total{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    background-color: rgb(94, 105, 133);
-}
-
-.tab-1{
-    height: 100vh;
-    width: 200px;
-    margin: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.logo{
-    width: 100px;
-    margin: 10px auto;
-    border-radius: 50%;
-    color: white;
-    text-align: center;
-}
-
-.nav-buttons{
-    margin: 20px auto;
-    text-align: center;
-}
-
-.nav-button{
-    height: 40px;
-    width: 200px;
-    margin: 10px;
-    border: none;
-    border-radius: 10px;
-    background-color: transparent;
-    color: white;
-    font-family: cursive;
-}
-
-.nav-button:hover{
     background-color: white;
-    color: rgb(74, 88, 104);
-    cursor: pointer;
-    transition: .7s;
 }
 
-.drop-down-menu{
-    height: 500px;
-    width: 350px;
-    position: fixed;
-    top: 50px;
-    left: 50px;
-    margin: 30px auto;
-    background-color: white;
-    border: 2px solid rgb(133, 94, 107);
-    border-radius: 15px;
+h2{
+    color:#072a5a ;
 }
 
-.tab-2{
-    width: 900px;
-    margin: 30px;
-    padding: 20px;
-    background-color: white;
-    border-radius: 50px;
-}
+
