--- a/missing_grade_/src/Pages/MissingGradeForm.css
+++ b/missing_grade_/src/Pages/MissingGradeForm.css
@@ -13,13 +13,13 @@
     width: 100%;
     height: 120vh;
     align-items: center;
-    background-color: rgb(94, 105, 133);
+    background-color: white;
     
 }
   
   h2 {
     text-align: center;
-    color: #007bff;
+    color: #072a5a;
   }
   
   form {
@@ -40,7 +40,7 @@
   }
   
   button {
-    background-color: #007bff;
+    background-color: #072a5a;
     color: #fff;
     padding: 10px;
     border: none;
