--- a/my-react-assignment/src/index.css
+++ b/my-react-assignment/src/index.css
@@ -2,5 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 body{
-    background-color: rgb(20, 129, 102);
+    background-color: rgb(247, 247, 247);  
+     /* background-image: url(./assets/background.png);
+    height: fit-content;  */
 }
