--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,18 +1,55 @@
-.navbar{
-    height: 80px;
-    border-bottom: 0.5 solid #fff;
+.navbar {
+    width: 100% !important;
+    height: 100px;
+    border-bottom: 0.5px solid #fff; 
+    display: flex;
     align-items: center;
     font-size: 14px;
     color: #3e3e3e;
-
-}
-
+  }
+  
 .wrapper {
-    width: 50%;
-    height: auto;
+    height: 60px;
     display: flex;
+    align-items: center;
+    border-radius: 0 !important;
+    padding: 20px;
+    justify-content: space-between;
+    width: 100% !important; 
+    box-shadow: none !important;
   }
 
-.items{
+  .search{
     display: flex;
-}
+    align-items: center;
+    border: 0.5px solid lightgray;
+    padding: 3px;
+  }
+
+  input{
+    border: none;
+    outline: none;
+    background-color: transparent;
+  }
+
+  input::placeholder{
+    font-size: 12px;
+  }
+  
+.items {
+    display: flex;
+    align-items: center;
+  }
+
+  .item{
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+  }
+  
+  .avatar{
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+  }
+  
