--- a/my-react-project/src/App.css
+++ b/my-react-project/src/App.css
@@ -139,3 +139,12 @@ input {
   padding-bottom: 10px;
   padding-left: 0;
 }
+
+
+.container1 {
+  padding: 1.2rem;
+  border: 1px solid;
+  border-radius: 10px;
+  margin: 5rem;
+
+}
