--- a/missing_grade_/src/Pages/component/footer.css
+++ b/missing_grade_/src/Pages/component/footer.css
@@ -2,7 +2,8 @@ footer {
   background-color: #072a5a;
   color: #fff;
   text-align: center;
-  padding: 1em;
+  padding-top: 20px;
+  padding-bottom: 20px;
   bottom: 0;
   width: 100%;
   }
@@ -11,3 +12,17 @@ footer {
     color: #b5975d;
     font-weight: bolder;
   }
+
+  @media screen and (max-width: 500px) {
+    footer {
+        padding: 10px;
+    }
+}
+
+
+
+@media screen and (min-width: 501px) and (max-width: 850px) {
+  .footer {
+      padding: 15px;
+  }
+}
