--- a/missing_grade_/src/Pages/dashboard.css
+++ b/missing_grade_/src/Pages/dashboard.css
@@ -9,7 +9,7 @@
         max-width: 60px;
         font-size: 0.6rem;
     }
-    .tab-2{
+    .tab2{
         min-width: 80%;
         flex-wrap: wrap;
     }
@@ -48,7 +48,7 @@
         max-width: 60px;
         font-size: 0.6rem;
     }
-    .tab-2{
+    .tab2{
         min-width: 80%;
         flex-wrap: wrap;
     }
@@ -74,13 +74,13 @@
     
 }
 
-.total{
+.dashboard{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    background-color: #072a5a;
+    background-color: white;
 }
 
 .tab-1{
@@ -136,9 +136,9 @@
     border-radius: 15px;
 }
 
-.tab-2{
+.tab2{
     width: 900px;
-    margin: 30px;
+    margin: 20px;
     padding: 20px;
     display: flex;
     align-items: flex-start;
@@ -155,12 +155,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 10px;
 }
 
 .tab-2-right{
     width: 400px;
-    margin: 50px auto;
-    padding-bottom: 20px;
+    margin-right: 20px ;
+    padding: 10px;
     background-color: #a07d50;
     border-radius: 20px;
 }
