--- a/src/components/pages/Landing/Landing.css
+++ b/src/components/pages/Landing/Landing.css
@@ -8,7 +8,7 @@
    
   } */
 
-  .background {
+  .landing-container .background {
     background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/public/assets/images/Landing-bg.webp) center center/cover no-repeat;
     height: 100vh;
     width: 100%;
