--- a/gradeassignment/myapp/src/App.css
+++ b/gradeassignment/myapp/src/App.css
@@ -1,4 +1,4 @@
-.App{
+h1{
   font-size: 60px;
   font-family:'Times New Roman', Times, serif;
   text-align: left;
@@ -6,13 +6,23 @@
   margin-left: 350px;
 }
 
-.login{
-  margin-left: 450px;
+p{
+  font-family:'Times New Roman', Times, serif;
+  font-size: 30px;
+  text-align: left;
+  
+  margin-left: 350px;
+}
+
+
+.login button {
+  margin-left: 350px;
   padding-top: 2rem;
- 
+  font-size: 20px;
+  font-weight: bolder;
 }
  
-.login button{
+button{
   height: 50px;
   width: 150px;
   border-radius: 40px;
@@ -22,8 +32,9 @@
   border: none;
   cursor: pointer;
   font-weight: bolder;
+ 
+  
 }
-
-.login button:hover{
+ button:hover{
   background-color: rgb(73, 152, 236);
 }
