--- a/grade-report-system/src/Pages/Help.css
+++ b/grade-report-system/src/Pages/Help.css
@@ -67,3 +67,71 @@
     border: none;
     
 }
+
+
+.Foote{
+    width: 100%;
+    height: 180px;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-self: center;
+    margin-top: 150px;
+}
+
+.Foote p{
+    display: inline-block;
+    color: azure;
+    margin-top: 20px;
+    margin-left: 500px;
+}
+
+
+.Foote input {
+    display: inline-block;
+    margin-top: 15px;
+    margin-left: 400px;
+    height: 90px;
+    width: 500px;
+    color: rgb(224, 172, 0);
+}
+
+
+.Foote button{
+    display: inline;
+    margin-top: 30px;
+    margin-left: 605px;
+    width: 90px;
+    height: 50px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.Foote button:hover{
+    background-color: black;
+    color: white;
+}
+
+
+.sent-popup{
+    width: 200px;
+    height: 100px;
+    position: absolute;
+    margin-left: 550px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    color:rgb(2, 2, 51);
+    background-color:rgb(224, 172, 0);
+    transform: scale(1);
+    transform: 1.2s;
+
+}
+
+.main{
+    position: absolute;
+    transform: scale(0);
+}
