--- a/grade-report-system/src/Navbar.css
+++ b/grade-report-system/src/Navbar.css
@@ -55,8 +55,12 @@ body{
     padding-top: 5px;
     color: rgb(224, 172, 0);
     text-decoration: none;
-   
+}
 
+.HOME:hover{
+    color:rgb(2, 2, 51);
+    background-color: rgb(224, 172, 0);
+    transition: 0.5s;
 }
 
 .link1{ 
@@ -73,6 +77,12 @@ body{
     text-decoration: none;
    
 }
+.link1:hover{
+    color: white;
+    background-color: rgb(224, 172, 0);
+    transition: 0.5s;
+}
+
 
 .link2{
     display: flex;
@@ -87,6 +97,13 @@ body{
     color: black;
     text-decoration: none;
 }
+.link2:hover{
+    color: white;
+    background-color: rgb(224, 172, 0);
+    transition: 0.5s;
+}
+
+
 
 .link3{
     display: flex;
@@ -100,6 +117,12 @@ body{
     padding-top: 5px;
     color: black;
     text-decoration: none;
+}
+
+.link3:hover{
+    color: white;
+    background-color: rgb(224, 172, 0);
+    transition: 0.5s;
 }
 
 .link4{
@@ -116,6 +139,12 @@ body{
     text-decoration: none;
 }
 
+.link4:hover{
+    color: white;
+    background-color: rgb(224, 172, 0);
+    transition: 0.5s;
+}
+
 
 .link5{
     display: flex;
@@ -129,6 +158,12 @@ body{
     padding-top: 5px;
     color: black;
     text-decoration: none;
+}
+
+.link5:hover{
+    color: white;
+    background-color: rgb(224, 172, 0);
+    transition: 0.5s;
 }
 
 .Left-div{
