--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -20,6 +20,7 @@
   }
   
   label {
+    
     color: white;
     font-weight: bold;
     display: block;
@@ -47,6 +48,7 @@
   }
   
   p {
+    color: white;
     margin-top: 15px;
   }
 
@@ -79,7 +81,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.1); /* Semi-transparent white */
+    background: rgba(255, 255, 255, 0); /* Semi-transparent white */
   }
   
   
