--- a/frontend-grading-assignment/src/styles/Dashboard.css
+++ b/frontend-grading-assignment/src/styles/Dashboard.css
@@ -13,11 +13,53 @@
   position: absolute;
   bottom: 0px;
   left: 0px;
-  background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+  background-color: rgba(0, 0, 0, 0.5); 
   color: white;
   padding-left: 20px;
   padding-right: 20px;
-  font-weight: bold; /* Makes the text bold */
+  font-weight: bold; 
+ }
+ 
+
+.course-table-container {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #34d0cd;
+  border-radius: 5px;
+  background-color: #22899e;
+ }
+ 
+ .course-table-container table {
+  width: 100%;
+  border-collapse: collapse;
+ }
+ 
+ .course-table-container th,
+ .course-table-container td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #070707;
+ }
+ 
+ .course-table-container th {
+  background-color: #000000;
+  font-weight: bold;
+ }
+
+ .text_grid{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin-bottom: 10%;
+ }
+ .m_grade{
+  margin-left: 20%;
+  width: 65%;
+ }
+
+ .db_text{
+  color: black;
  }
  
  /* Navigation Links */
