--- a/src/pages/Homepage/css/Dashboard.css
+++ b/src/pages/Homepage/css/Dashboard.css
@@ -101,7 +101,11 @@ color:white;
     padding: 10px 2rem;
 }
 .hearder--title{
-    color: #846ff7;
+    color:  black;
+}
+.hearder--title span{
+    color: black;
+    font-size: 1.4rem;
 }
 .user--info{
     display: flex;
@@ -118,7 +122,7 @@ color:white;
     padding: 4px 12px;
 }
 .search--box input{
-    /* background: transparent; */
+     background: transparent; 
     padding: 10px;
 }
 .search--box i {
@@ -158,8 +162,8 @@ color:white;
     background: #ebe9e9;
     border-radius:10px;
     padding: 1.2rem;
-    width: 290px;
-    height: 150px;
+    width: 350px;
+    height: 120px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -181,8 +185,8 @@ color:white;
     flex-direction: column;
 }
 .title{
-    font-size: 12px;
-    font-weight: 200;
+    font-size: 20px;
+    font-weight: 400;
 }
 .amount--value{
     font-size: 24px;
@@ -190,14 +194,15 @@ color:white;
     font-weight: 600;
 }
 .icon-react{
-    color:#846ff7;
+    color:white;
     padding: 1rem;
     height: 50px;
     width: 50px;
     text-align: center;
     border-radius: 50%;
-    font-size: 1.rem;
-    background: rgb(240, 76, 76);
+    font-size: 1.1rem;
+   margin-bottom: 10px;
+    /* background: rgb(240, 76, 76); */
 }
 .card-details{
     font-size: 18px;
@@ -291,4 +296,12 @@ tfoot td{
 }
 .table-container button{
     color: green;
+}
+
+
+/*contact*/
+.contact-instructors{
+    text-align: center;
+    margin: 10px;
+    color: #846ff7;
 }
