--- a/frontend-grading-assignment/src/App.css
+++ b/frontend-grading-assignment/src/App.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background-color: #f1f1f1;
+  background-color: rgb(231, 228, 228);
  }
  
  .navbar select {
