--- a/frontend-grading-assignment/src/styles/Login.css
+++ b/frontend-grading-assignment/src/styles/Login.css
@@ -10,18 +10,22 @@ body {
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #7c67e2;
+    border-radius: 20px;
+    background-color: #f1f1f1;;
+    margin-top: 10%;
+
 }
 
 .login-container h1 {
     text-align: center;
     margin-bottom: 20px;
+    color: #000;
 }
 
 .login-container form {
     display: flex;
     flex-direction: column;
+    color: #000;
 }
 
 .login-container label {
