Finished with the landing page and started trying out other pages

--- a/grade_report/grade_report/src/home/hero/hero.css
+++ b/grade_report/grade_report/src/home/hero/hero.css
@@ -12,3 +12,24 @@
     padding-right: 50px;
     color: #fff;
 }
+.hero #heading h3{
+    color: #fff;
+}
+.hero #heading{
+    text-align: left;
+    margin: 0;
+    padding: 0;
+}
+@media screen and (max-width: 768px) {
+    .margin{
+        height: 40vh;
+    }
+    .hero{
+        background-position: right;
+        padding-top: 50%;
+        height: 80vh;
+    }
+    .hero .row{
+        width: 100%;
+    }
+}
