--- a/grade_report/grade_report/src/App.css
+++ b/grade_report/grade_report/src/App.css
@@ -71,5 +71,17 @@ button:hover{
   padding: 40px 0;
 }
 #heading h3{
-  
+  font-weight: 600;
+  letter-spacing: 1px;
+  color:#1eb2a6;
+  text-transform: uppercase;
+}
+#heading h1{
+  font-size: 45px;
+  margin: 20px 0;
+  text-transform: capitalize;
+}
+p{
+  line-height: 30px;
+  font-size: 18px;
 }
