--- a/grade_report/grade_report/src/components/common/heading/header.css
+++ b/grade_report/grade_report/src/components/common/heading/header.css
@@ -14,6 +14,7 @@
 header{
     background-color: rgba(255,255,255,0.2);
     margin: 0 30px;
+    position: relative;
 }
 header ul{
    padding: 30px 20px; 
@@ -22,12 +23,13 @@ header ul{
 header li{
     margin-right: 40px;
 }
-header ul li{
+header ul li a{
     color: #fff;
     font-weight: 500;
     transition: 0.5s;   
 }
-header ul li a:hover{
+header ul li a:hover {
+    color: #1eb2a6;
     cursor: pointer;
 }
 .start{
@@ -61,7 +63,7 @@ header ul li a:hover{
         font-size: 30px;
         position: absolute;
         right: 50px;
-        top: 20px;
+        top: -20px;
     }
     .mobile-nav{
         position: absolute;
